--- a/src/main/resources/assets/dzlta/lang/en_us.json
+++ b/src/main/resources/assets/dzlta/lang/en_us.json
@@ -34,5 +34,19 @@
   "advancements.dzlta.root.description": "Exploring the skies",
 
   "advancements.dzlta.get_weather_vane.title": "Which Way Does the Wind Blow?",
-  "advancements.dzlta.get_weather_vane.description": "Craft a Weather Vane to read the wind's direction"
+  "advancements.dzlta.get_weather_vane.description": "Craft a Weather Vane to read the wind's direction",
+
+
+
+
+  "gamerule.windEnabled": "Enable Wind",
+  "gamerule.windEnabled.description": "Enables or disables the wind mechanics.",
+  "gamerule.windLockDirection": "Lock Wind Direction",
+  "gamerule.windLockDirection.description": "Locks the current wind direction, preventing it from changing.",
+  "gamerule.windMinDurationTicks": "Wind Change Base Interval",
+  "gamerule.windMinDurationTicks.description": "The minimum time (in seconds) before the wind direction changes.",
+  "gamerule.windRandomDurationTicks": "Wind Change Random Interval",
+  "gamerule.windRandomDurationTicks.description": "Maximum random time (in seconds) added to the base interval for wind changes.",
+  "gamerule.windChaoticStorms": "Chaotic Storms",
+  "gamerule.windChaoticStorms.description": "If enabled, wind changes direction much more frequently during thunderstorms."
 }
