Fixed some wind issues

--- a/src/main/resources/assets/dzlta/lang/en_us.json
+++ b/src/main/resources/assets/dzlta/lang/en_us.json
@@ -42,11 +42,26 @@
   "gamerule.windEnabled": "Enable Wind",
   "gamerule.windEnabled.description": "Enables or disables the wind mechanics.",
   "gamerule.windLockDirection": "Lock Wind Direction",
-  "gamerule.windLockDirection.description": "Locks the current wind direction, preventing it from changing.",
-  "gamerule.windMinDurationTicks": "Wind Change Base Interval",
-  "gamerule.windMinDurationTicks.description": "The minimum time (in seconds) before the wind direction changes.",
-  "gamerule.windRandomDurationTicks": "Wind Change Random Interval",
-  "gamerule.windRandomDurationTicks.description": "Maximum random time (in seconds) added to the base interval for wind changes.",
-  "gamerule.windChaoticStorms": "Chaotic Storms",
-  "gamerule.windChaoticStorms.description": "If enabled, wind changes direction much more frequently during thunderstorms."
+  "gamerule.windLockDirection.description": "Locks the wind direction, preventing it from changing dynamically.",
+  "gamerule.windSetDirection": "Set Wind Direction",
+  "gamerule.windSetDirection.description": "Manually sets the wind direction (0-7, 0=N). Takes effect immediately. If not locked, resets the change timer.",
+  "gamerule.windDirectionBaseInterval": "Wind Direction Base Interval",
+  "gamerule.windDirectionBaseInterval.description": "The minimum time (in seconds) before the wind direction changes.",
+  "gamerule.windDirectionRandomInterval": "Wind Direction Random Interval",
+  "gamerule.windDirectionRandomInterval.description": "Maximum random time (in seconds) added to the base interval for wind changes.",
+  "gamerule.windDirectionChaoticStorms": "Chaotic Storms (Direction)",
+  "gamerule.windDirectionChaoticStorms.description": "If enabled, wind changes direction much more frequently during thunderstorms.",
+
+  "gamerule.windStrengthEnabled": "Enable Wind Strength",
+  "gamerule.windStrengthEnabled.description": "Enables or disables the wind strength mechanic.",
+  "gamerule.windLockStrength": "Lock Wind Strength",
+  "gamerule.windLockStrength.description": "Locks the wind strength, preventing it from changing dynamically.",
+  "gamerule.windSetStrength": "Set Wind Strength",
+  "gamerule.windSetStrength.description": "Manually sets the wind strength (0-4). Takes effect immediately. If not locked, resets the change timer.",
+  "gamerule.windStrengthBaseInterval": "Wind Strength Base Interval",
+  "gamerule.windStrengthBaseInterval.description": "The minimum time (in seconds) before the wind strength changes.",
+  "gamerule.windStrengthRandomInterval": "Wind Strength Random Interval",
+  "gamerule.windStrengthRandomInterval.description": "Maximum random time (in seconds) added to the base interval for wind strength changes.",
+  "gamerule.windStrengthChaoticStorms": "Chaotic Storms (Strength)",
+  "gamerule.windStrengthChaoticStorms.description": "If enabled, wind strength is forced to max (4) during thunderstorms."
 }
