Fixed Balloon Crate texture bugs Added Balloon Crate sound Added Block Tag for Balloon Crate Changed Weather Vane redstone output strength Changed Balloon Crate Texture (was too dark)

--- a/src/main/resources/assets/dzlta/lang/en_us.json
+++ b/src/main/resources/assets/dzlta/lang/en_us.json
@@ -44,6 +44,7 @@
   "sound.dzlta.vane_creak3": "Weather Vane Creaking",
   "sound.dzlta.vane_creak4": "Weather Vane Creaking",
   "sound.dzlta.vane_creak5": "Weather Vane Creaking",
+  "sound.dzlta.crate_pop": "Crate Pop",
 
 
 
